# mac_screenshot

./: .gitignore  AGENTS.md  BEFORE_RELASE_TODO.md  CODE_REVIEW.md  PLAN_CUSTOM_SHORTCUTS.md  README.md  SIZE_ISSUE_REPORT.md  WORKING_MEMORY.md  commit.md  documentation.md  editor-lean.html  editor.html  language.md  note.html  package-lock.json  package.json  playground.html  rename.html  shortcut-config.html  thoughtnotebook.md  traycer_interviewme.md  vite.config.ts
Devnotes/: issue-desktop-zoom-after-rename.md  issue-note-window-focus-delay.md
public/: rename.css  shortcut-config.css
src/: App.css  App.tsx  FilenameTemplate.tsx  constants.ts  shortcutFormat.ts  stitch.ts
src-tauri/: Cargo.toml  plan.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/playground/: main.tsx  playground.css
